05/03/2010:
	- Another fix to JPEGCompressor.cc to fix a crash with very small
	  tiles with libjpeg-8.


23/02/2010:
	- Modified JPEGCompressor.cc to fix compatibility problem with
	  libjpeg version 8. Simply removed jpeg_write_tables from
	  InitCompression function.


09/02/2010:
	- Fixed memory leak in Zoomify.cc and DeepZoom.cc


11/01/2010:
	- JPEG2000 support added via the Kakadu SDK. Added new class
	  KakaduImage derived from the IIPImage class. JPEG2000 support
	  added thanks to Moravian Library in Brno (Moravska zemska knihovna
	  v Brne, http://www.mzk.cz/) R&D grant MK00009494301 & Old Maps Online
	  (http://www.oldmapsonline.org/) from the Ministry of Culture of
	  the Czech Republic.
	- Fix to string literal warnings in Writer.h


08/01/2010:
	- Major changes to the HTTP headers sent by iipsrv. Added
	  HTTP Server id and Last-Modified timestamps to all server output.
	  Checks are now made for a If-Modified-Since response and a
	  304 Not Modified reponse returned if the timestamps match.
	  This should significantly improve server performance.


04/01/2010:
	- Fixed bug in FIF.cc - the file system prefix was not being
	  initialized for each new image.
	- Layers environment variable changed to MAX_LAYERS to represent
	  the maximum number of layers user is allowed to decode.


03/12/2009: Version 0.9.8 Released


02/12/2009:
	- Adding missing include to IIPImage.cc for compilation with
	  gcc 4.4.1


01/12/2009:
	- Added DeepZoom protocol support. Work carried out thanks to
	  Moravian Library in Brno (Moravska zemska knihovna v Brne,
	  http://www.mzk.cz/) R&D grant MK00009494301 & Old Maps Online
	  (http://www.oldmapsonline.org/) from the Ministry of Culture of
	  the Czech Republic.


29/11/2009:
	- Added SPECTRA.cc class for returning spectral reflectance values
	  from multispectral images.
	- Fix to IIPImage.cc to properly count the number of horizontal and
	  vertical angles (used for multispectral bands).


26/11/2009: