@@ -1,3 +1,9 @@
+15/09/2010:
+	- Modified IIPImage.cc to enable handling of images with spectral band
+	  indices with mixtures of 3 or 4 digits. For example, H1_pyr_000_090.tif
+	  and H1_pyr_2500_090.tif.
+
+
 05/03/2010:
 	- Another fix to JPEGCompressor.cc to fix a crash with very small
 	  tiles with libjpeg-8.
